--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
     margin: 0px 30px;
   }
   .option label{
-    font-weight: lighter;
+    font-weight: 500;
     display: inline;
   }
 
@@ -59,7 +59,7 @@ body {
   justify-content: space-between;
 }
 
-#insurance-provider,#policy-no{
+#insurance-provider,#policy_no{
   max-width: 46%;
 }
 
